--- a/index.html
+++ b/index.html
@@ -247,6 +247,10 @@
                     <!-- Button zum übertragen der Daten an die CSV-Datei -->
                     <button type="submit" class="btn btn-primary" onclick="speichern()">Daten Speichern</button>
                 </div>
+                <div class="float-right ml-2">
+                    <!-- Button zum Herunterladen der Datei -->
+                    <a href="data.csv" download class="btn btn-secondary">Datei Herunterladen</a>
+                </div>
             </form>
         </div>
     </div>
