--- a/index.html
+++ b/index.html
@@ -1,269 +1,28 @@
 <!DOCTYPE html>
 <html lang="de-DE">
-
 <head>
-    <title>Personalverwaltungssystem</title>
-    <meta name="description" content="Ein Personalverwaltungssystem zur Verwaltung von Mitarbeiterdaten">
-    <meta name="keywords" content="Personalverwaltung, Mitarbeiter, Daten, System">
-    <meta name="author" content="Adriano Christmann, Michael Leipner, Michel Hilarius, Tom van Duijn">
-    <meta name="robots" content="index,follow">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="test.js"></script>
+  <title>Startseite</title>
+  <!-- Einbindung von Bootstrap-CDN -->
+  <meta name="description" content="Ein Personalverwaltungssystem zur Verwaltung von Mitarbeiterdaten">
+  <meta name="keywords" content="Personalverwaltung, Mitarbeiter, Daten, System">
+  <meta name="author" content="Adriano Christmann, Michael Leipner, Michel Hilarius, Tom van Duijn">
+  <meta name="robots" content="index,follow">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style4.css">
 </head>
-
-<body>
-    <div class="container mt-6 mx-auto">
-        <div class="row">
-            <div class="col-md-4 mx-auto">
-                <img src="logo.jpg" alt="Logo">
-            </div>
-        </div>
-        <div class="col-mt-6 mx-auto">
-            <h1>Personalverwaltungssystem</h1>
-            <form>
-                <!-- Überprüfen ob die Personalnummer schon vorhanden ist -->
-                <div class="form-group">
-                    <label for="eingabe-personalnummer">Personalnummer:</label>
-                    <input type="text" class="form-control" id="eingabe-personalnummer"
-                        placeholder="Personalnummer eingeben:">
-                    <!-- Button zum überprüfen der CSV-Datei ob die Personalnummer vorhanden ist und wenn  ja dann ausgeben der Daten -->
-                    <button type="button" class="btn btn-primary" id="btnPersonalnummerPruefen">Personalnummer
-                        überprüfen</button>
-                </div>
-                <div class="form-group">
-                    <label for="ausgabe-personalnummer"></label>
-                    <!-- Größen verstellbare Textarea -->
-                    <textarea class="form-control" id="ausgabe-personalnummer" placeholder="Ausgabe-Personaldaten"
-                        readonly></textarea>
-                </div>
-                <!-- Personalnummer vergeben wenn noch keine vorhanden ist -->
-                <div class="form-group">
-                    <label for="personalnummer">Zuteilung Personalnummer:</label>
-                    <input type="text" class="form-control" id="personalnummer" placeholder="Personalnummer" required>
-                </div>
-                <!-- Allgemeine Person angaben wie Anrede, Vorname, Nachname, Geburtsdatum, Geschlecht, Staatsangehörogkeit, -->
-                <h2>Angabe zur Person</h2>
-                <div class="form-group">
-                    <label for="anrede">Anrede:</label>
-                    <!-- Auswahlmenü Anrede -->
-                    <select class="form-control" id="anrede" required>
-                        <option value="">Bitte wählen</option>
-                        <option value="Herr">Herr</option>
-                        <option value="Frau">Frau</option>
-                    </select>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="vorname">Vorname:</label>
-                            <input type="text" class="form-control" id="vorname" placeholder="Vorname:" required>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="nachname">Nachname:</label>
-                            <input type="text" class="form-control" id="nachname" placeholder="Nachname:" required>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="geschlecht">Geschlecht:</label>
-                    <!-- Auswahlmenü Geschlecht -->
-                    <select class="form-control" id="geschlecht" required>
-                        <option value="">Bitte wählen</option>
-                        <option value="männlich">&#x1F468; Männlich</option>
-                        <option value="weiblich">&#x1F469; Weiblich</option>
-                        <option value="divers">&#x1F9D1;&#x200D;&#x1F91D;&#x200D;&#x1F9D1; Divers</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="staatsangehörigkeit">Staatsangehörigkeit:</label>
-                    <!-- Auswahlmenü Staatsangehörigkeit -->
-                    <select class="form-control" id="staatsangehoerigkeit" required>
-                        <option value="">Bitte wählen</option>
-                        <option value="Austria">🇦🇹 Austria</option>
-                        <option value="Belgium">🇧🇪 Belgium</option>
-                        <option value="Bulgaria">🇧🇬 Bulgaria</option>
-                        <option value="Croatia">🇭🇷 Croatia</option>
-                        <option value="Cyprus">🇨🇾 Cyprus</option>
-                        <option value="Czech Republic">🇨🇿 Czech Republic</option>
-                        <option value="Denmark">🇩🇰 Denmark</option>
-                        <option value="Estonia">🇪🇪 Estonia</option>
-                        <option value="Finland">🇫🇮 Finland</option>
-                        <option value="France">🇫🇷 France</option>
-                        <option value="Germany">🇩🇪 Germany</option>
-                        <option value="Greece">🇬🇷 Greece</option>
-                        <option value="Hungary">🇭🇺 Hungary</option>
-                        <option value="Ireland">🇮🇪 Ireland</option>
-                        <option value="Italy">🇮🇹 Italy</option>
-                        <option value="Latvia">🇱🇻 Latvia</option>
-                        <option value="Lithuania">🇱🇹 Lithuania</option>
-                        <option value="Luxembourg">🇱🇺 Luxembourg</option>
-                        <option value="Malta">🇲🇹 Malta</option>
-                        <option value="Netherlands">🇳🇱 Netherlands</option>
-                        <option value="Poland">🇵🇱 Poland</option>
-                        <option value="Portugal">🇵🇹 Portugal</option>
-                        <option value="Romania">🇷🇴 Romania</option>
-                        <option value="Slovakia">🇸🇰 Slovakia</option>
-                        <option value="Slovenja">🇸🇮 Slovenia</option>
-                        <option value="Spain">🇪🇸 Spain</option>
-                        <option value="Sweden">🇸🇪 Sweden</option>
-                    </select>
-                </div>
-                <!-- Kontaktinformationen wie E-mail, Telefonnummer, Straße/Hausnummer, PLZ, Wohnort, Bundesland -->
-                <h2>Kontakt Informationen</h2>
-                <div class="form-group">
-                    <label for="email">E-Mail:</label>
-                    <input type="email" class="form-control" id="email" placeholder="E-Mail:" required>
-                </div>
-                <div class="form-group">
-                    <label for="telefon">Telefonnummer:</label>
-                    <input type="text" class="form-control" id="telefon" placeholder="Telefonnummer:" required>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="strasse">Straße:</label>
-                            <input type="text" class="form-control" id="strasse" placeholder="Straße:" required>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="hausnummer">Hausnummer:</label>
-                            <input type="text" class="form-control" id="hausnummer" placeholder="Hausnummer:" required>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="plz">PLZ:</label>
-                            <input type="text" class="form-control" id="plz" placeholder="PLZ:" required>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-group">
-                            <label for="wohnort">Wohnort:</label>
-                            <input type="text" class="form-control" id="wohnort" placeholder="Wohnort:" required>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="bundesländer">Bundesland:</label>
-                    <!-- Auswahlmenü Bundesland -->
-                    <select class="form-control" id="bundesland" required>
-                        <option value="">Bitte wählen</option>
-                        <option value="Baden-Württemberg">Baden-Württemberg</option>
-                        <option value="Bayern">Bayern</option>
-                        <option value="Berlin">Berlin</option>
-                        <option value="Brandenburg">Brandenburg</option>
-                        <option value="Bremen">Bremen</option>
-                        <option value="Hamburg">Hamburg</option>
-                        <option value="Hessen">Hessen</option>
-                        <option value="Mecklenburg-Vorpommern">Mecklenburg-Vorpommern</option>
-                        <option value="Niedersachsen">Niedersachsen</option>
-                        <option value="Nordrhein-Westfalen">Nordrhein-Westfalen</option>
-                        <option value="Rheinland-Pfalz">Rheinland-Pfalz</option>
-                        <option value="Saarland">Saarland</option>
-                        <option value="Sachsen">Sachsen</option>
-                        <option value="Sachsen-Anhalt">Sachsen-Anhalt</option>
-                        <option value="Schleswig-Holstein">Schleswig-Holstein</option>
-                        <option value="Thüringen">Thüringen</option>
-                    </select>
-                </div>
-                <!-- Bankverbindung wie Kontoinhaber, IBAN, Name des Kreditinstituts -->
-                <h2>Bankverbindung</h2>
-                <div class="form-group">
-                    <label for="kontoinhaber">Kontoinhaber:</label>
-                    <input type="text" class="form-control" id="kontoinhaber" placeholder="Kontoinhaber:" required>
-                </div>
-                <div class="form-group">
-                    <label for="iban">IBAN:</label>
-                    <input type="text" class="form-control" id="iban" placeholder="IBAN:" required>
-                </div>
-                <div class="form-group">
-                    <label for="name des kreditinstituts">Name des Kreditinstituts:</label>
-                    <input type="text" class="form-control" id="kreditinstitut" placeholder="Name des Kreditinstituts:"
-                        required>
-                </div>
-                <!-- Lohnsteuer wie Steueridentifikationsnummer, Steuerklasse -->
-                <h2>Lohnsteuer</h2>
-                <div class="form-group">
-                    <label for="steueridentifikationsnummer">Steueridentifikationsnummer:</label>
-                    <input type="text" class="form-control" id="steueridentifikationsnummer"
-                        placeholder="Steueridentifikationsnummer:" required>
-                </div>
-                <div class="form-group">
-                    <label for="steuerklasse">Steuerklasse:</label>
-                    <!-- Auswahlmenü Steuerklasse-->
-                    <select class="form-control" id="steuerklasse" required>
-                        <option value="">Bitte wählen</option>
-                        <option value="1">I</option>
-                        <option value="2">II</option>
-                        <option value="3">III</option>
-                        <option value="4">IV</option>
-                        <option value="5">V</option>
-                        <option value="6">VI</option>
-                    </select>
-                </div>
-                <!-- Sozialversicherung wie Krankenkasse, Versicherungsnummer(RV-Nummer) -->
-                <h2>Sozialversicherung</h2>
-                <div class="form-group">
-                    <label for="krankenkasse">Krankenkasse:</label>
-                    <input type="text" class="form-control" id="krankenkasse" placeholder="Krankenkasse:" required>
-                </div>
-                <div class="form-group">
-                    <label for="versicherungsnummer">Versicherungsnummer (RV-Nummer):</label>
-                    <input type="text" class="form-control" id="versicherungsnummer"
-                        placeholder="Versicherungsnummer (RV-Nummer):" required>
-                </div>
-                <!-- Personalabteilung wie Beginn der Beschäftigung, Berufsbezeichnung, Abteilung -->
-                <h2>Personalabteilung</h2>
-                <div class="form-group">
-                    <label for="beginn">Beginn der Beschäftigung:</label>
-                    <input type="date" class="form-control" id="beginn" placeholder="Beginn der Beschäftigung:"
-                        required>
-                </div>
-                <div class="form-group">
-                    <label for="berufsbezeichnung">Berufsbezeichnung:</label>
-                    <input type="text" class="form-control" id="berufsbezeichnung" placeholder="Berufsbezeichnung:"
-                        required>
-                </div>
-                <div class="form-group">
-                    <label for="abteilung">Abteilung:</label>
-                    <input type="text" class="form-control" id="abteilung" placeholder="Abteilung:" required>
-                </div>
-                <div class="float-left">
-                    <!-- Button zum übertragen der Daten an die CSV-Datei -->
-                    <button type="submit" class="btn btn-primary" onclick="speichern()">Daten Speichern</button>
-                </div>
-                <div class="float-right ml-2">
-                    <!-- Button zum Herunterladen der Datei -->
-                    <a href="data.csv" download class="btn btn-secondary">Datei Herunterladen</a>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!-- jQuery (wird für Bootstrap JavaScript-Plugins benötigt) -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+<body style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+  <div style="position: absolute; top: 10px; right: 10px;">Startseite</div>
+  <h1>Personalverwaltungssystem</h1>
+  <div class="container" style="display:flex; flex-direction:column; align-items:center;"> 
+    <img src="logo.jpg" alt="Beschreibung des Bildes"> 
+  </div>
+  <div>
+    <button onclick="window.location.href = 'eingabe.html';">Mitarbeiter hinzufügen</button>
+    <button onclick="window.location.href = 'pruefen.html';">Mitarbeiter überprüfen</button>
+  </div>
 </body>
-
 </html>
