--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <img src="logo.jpg" alt="Beschreibung des Bildes"> 
   </div>
   <div>
+    <!--Buttons mit verlinkung zu den anderen Seiten -->
     <button onclick="window.location.href = 'eingabe.html';">Mitarbeiter hinzufügen</button>
     <button onclick="window.location.href = 'pruefen.html';">Mitarbeiter überprüfen</button>
   </div>
