--- a/pruefen.html
+++ b/pruefen.html
@@ -23,7 +23,7 @@
     <h1>Personal-Check</h1>
     <img src="logo.jpg" alt="Beschreibung des Bildes">
   </div>
-  <!-- Überprüfen ob die Personalnummer schon vorhanden ist -->
+  <!-- Überprüfen ob die Personalnummer vorhanden ist -->
   <div class="form-group">
     <label for="eingabe-personalnummer"></label>
     <input type="text" class="form-control" id="eingabe-personalnummer" name="eingabe-personalnummer" placeholder="Personalnummer eingeben:">
