--- a/pruefen.html
+++ b/pruefen.html
@@ -15,6 +15,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style4.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    #ausgabe-personalnummer {
+      height: 600px;
+      width: 500px;
+    }
+  </style>
 </head>
 
 <body style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
@@ -23,7 +29,7 @@
     <h1>Personal-Check</h1>
     <img src="logo.jpg" alt="Beschreibung des Bildes">
   </div>
-  <!-- Überprüfen ob die Personalnummer vorhanden ist -->
+  <!-- Überprüfen ob die Personalnummer schon vorhanden ist -->
   <div class="form-group">
     <label for="eingabe-personalnummer"></label>
     <input type="text" class="form-control" id="eingabe-personalnummer" name="eingabe-personalnummer" placeholder="Personalnummer eingeben:">
@@ -38,5 +44,5 @@
   </div>
 
 </body>
-<!-- ende body von html pruefen -->
+
 </html>
